--- a/.github/workflows/manual_messages.yml
+++ b/.github/workflows/manual_messages.yml
@@ -10,6 +10,8 @@ on:
         description: 'Person to greet'
         default: 'IMS!'
         required: true
+  pull_request:
+    
 
 jobs:
   Explore-GitHub-Actions:
